# MinecraftResourceSync

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.yaml
base/: Cargo.toml
base/src/: lib.rs
base/src/models/: config.rs  error.rs  manager_res.rs  mod.rs  request.rs
base/src/utils/: config_loader.rs  res_loader.rs
client/: Cargo.toml
client/src/: main.rs
client/src/module/: client_module.rs  mod.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
server/src/module/: server_module.rs
server/src/service/: fetch_missing_mod.rs  mod.rs
server/src/util/: mod.rs  res_manager.rs
src/: client.rs  main.rs  server.rs
src/module/: base.rs  client_module.rs  mod.rs  server_module.rs
src/utils/: config_loader.rs  mod.rs  res_loader.rs  res_manager.rs
