[package]
name = "fred_mc_res_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/server.rs"
name = "server"

[[bin]]
path = "src/client.rs"
name = "client"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"