# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "server","client"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.28", features = ["full"] }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.30"
rust-crypto = "0.2.36"