# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "server","client"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.28", features = ["full"] }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.30"
rust-crypto = "0.2.36"
log = "0.4.22"
clap = "4.5.4"
thiserror = "1.0.63"
reqwest = "0.12.5"
lazy_static = "1.5.0"
maplit = "1.0.2"