[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base"}
actix-web = { workspace = true }
log_util = { path = "../LogUtil" }
log = { workspace = true }
clap = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
maplit = { workspace = true }

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }